--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,145 @@
-<h1> Hello World! </h1>
+<!-- Add this css File in head tag-->
+       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
+       <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet" media="all">
+
+
+<!--
+       If you want to change #bootstrap-touch-slider id then you have to change Carousel-indicators and Carousel-Control  #bootstrap-touch-slider slide as well
+       Slide effect: slide, fade
+       Text Align: slide_style_center, slide_style_left, slide_style_right
+       Add Text Animation: https://daneden.github.io/animate.css/
+       -->
+
+
+       <div id="bootstrap-touch-slider" class="carousel bs-slider slide  control-round indicators-line" data-ride="carousel" data-pause="hover" data-interval="5000" >
+
+           <!-- Indicators -->
+           <ol class="carousel-indicators">
+               <li data-target="#bootstrap-touch-slider" data-slide-to="0" class="active"></li>
+               <li data-target="#bootstrap-touch-slider" data-slide-to="1"></li>
+               <li data-target="#bootstrap-touch-slider" data-slide-to="2"></li>
+           </ol>
+
+           <!-- Wrapper For Slides -->
+           <div class="carousel-inner" role="listbox">
+
+               <!-- Third Slide -->
+               <div class="item active">
+
+                   <!-- Slide Background -->
+                   <img src="https://static.pexels.com/photos/6224/hands-people-woman-working.jpg" alt="Bootstrap Touch Slider"  class="slide-image"/>
+                   <div class="bs-slider-overlay"></div>
+
+                   <div class="container">
+                       <div class="row">
+                           <!-- Slide Text Layer -->
+                           <div class="slide-text slide_style_left">
+                               <h1 data-animation="animated zoomInRight">Bootstrap Carousel</h1>
+                               <p data-animation="animated fadeInLeft">Bootstrap carousel now touch enable slide.</p>
+                               <a href="http://localhost:3000/jobs/" target="_blank" class="btn btn-default" data-animation="animated fadeInLeft">应聘工作</a>
+                               <a href="http://localhost:3000/jobs/" target="_blank"  class="btn btn-primary" data-animation="animated fadeInRight">发布工作</a>
+                           </div>
+                       </div>
+                   </div>
+               </div>
+               <!-- End of Slide -->
+
+               <!-- Second Slide -->
+               <div class="item">
+
+                   <!-- Slide Background -->
+                   <img src="https://picjumbo.imgix.net/HNCK7437.jpg?q=40&w=1650&sharp=30" alt="Bootstrap Touch Slider"  class="slide-image"/>
+                   <div class="bs-slider-overlay"></div>
+                   <!-- Slide Text Layer -->
+                   <div class="slide-text slide_style_center">
+                       <h1 data-animation="animated flipInX">Bootstrap touch slider</h1>
+                       <p data-animation="animated lightSpeedIn">Make Bootstrap Better together.</p>
+                       <a href="http://localhost:3000/jobs/" target="_blank" class="btn btn-default" data-animation="animated fadeInUp">应聘工作</a>
+                       <a href="http://localhost:3000/jobs/" target="_blank"  class="btn btn-primary" data-animation="animated fadeInDown">发布工作</a>
+                   </div>
+               </div>
+               <!-- End of Slide -->
+
+               <!-- Third Slide -->
+               <div class="item">
+
+                   <!-- Slide Background -->
+                   <img src="https://static.pexels.com/photos/30342/pexels-photo-30342.jpg" alt="Bootstrap Touch Slider"  class="slide-image"/>
+                   <div class="bs-slider-overlay"></div>
+                   <!-- Slide Text Layer -->
+                   <div class="slide-text slide_style_right">
+                       <h1 data-animation="animated zoomInLeft">Beautiful Animations</h1>
+                       <p data-animation="animated fadeInRight">Lots of css3 Animations to make slide beautiful .</p>
+                       <a href="http://localhost:3000/jobs/" target="_blank" class="btn btn-default" data-animation="animated fadeInLeft">应聘工作</a>
+                       <a href="http://localhost:3000/jobs/" target="_blank" class="btn btn-primary" data-animation="animated fadeInRight">发布工作</a>
+                   </div>
+               </div>
+               <!-- End of Slide -->
+
+
+           </div><!-- End of Wrapper For Slides -->
+
+           <!-- Left Control -->
+           <a class="left carousel-control" href="#bootstrap-touch-slider" role="button" data-slide="prev">
+               <span class="fa fa-angle-left" aria-hidden="true"></span>
+               <span class="sr-only">Previous</span>
+           </a>
+
+           <!-- Right Control -->
+           <a class="right carousel-control" href="#bootstrap-touch-slider" role="button" data-slide="next">
+               <span class="fa fa-angle-right" aria-hidden="true"></span>
+               <span class="sr-only">Next</span>
+           </a>
+
+       </div> <!-- End  bootstrap-touch-slider Slider -->
+
+
+
+
+       <div class="content-section-a">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-5 col-sm-6">
+        <hr class="section-heading-spacer">
+        <div class="clearfix"></div>
+        <h2 class="section-heading"></h2>
+        <p class="lead"></p>
+      </div>
+      <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+        <%= image_tag 'pic-1.jpg', class: 'img-responsive' %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="content-section-b">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+        <hr class="section-heading-spacer">
+        <div class="clearfix"></div>
+        <h2 class="section-heading"></h2>
+        <p class="lead"> <a target="_blank" href="http://localhost:3000/jobs"></a> </p>
+      </div>
+      <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+        <%= image_tag 'pic-2.jpg', class: 'img-responsive' %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="content-section-a">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-5 col-sm-6">
+        <hr class="section-heading-spacer">
+        <div class="clearfix"></div>
+        <h2 class="section-heading"><br></h2>
+        <p class="lead"><a target="_blank" href="http://localhost:3000/jobs/"></a></p>
+      </div>
+      <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+        <%= image_tag 'pic-3.jpg', class: 'img-responsive' %>
+      </div>
+    </div>
+  </div>
+</div>
