--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,24 +88,85 @@
  padding-top: 7px;
  }
 
- //---guanyuwomen---
- .caption {
-   margin: 30px;
-   text-align: center;
-   top: 20px;
 
- }
 
- .thumbnail {
-     border: 0 none;
-     box-shadow: none;
-     margin-top: 60px;
- }
- 
+
+
 
 
 //-----common----
 .col-centered{
   float: none;
   margin: 0 auto;
+
+}
+
+//--hot jobs--
+.hot-jobs-category {
+  position: relative;
+  .section-title {
+    margin-top: 0px;
+
+    .short-line {
+      margin-bottom: 50px;
+    }
+  }
+  .hjc-ul {
+    margin: 50px auto 0;
+    overflow: hidden;
+    padding: 0 20px 0;
+    text-align: center;
+
+    width: 1024px;
+    .thumbnail {
+      padding: 0 0 15px 0;
+      width: 220px;
+      height: 150px;
+      margin-left: 10px;
+      margin-right: 10px;
+      border: none;
+      border-radius: 0;
+      position: relative;
+      overflow: hidden;
+      img {
+        width: 100%;
+        height: auto;
+      }
+      .title {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        background: #146eb4;
+        font-size: 16px;
+        padding: 6px 25px;
+        color: #fff;
+        transition: opacity .4s ease-in-out;
+      }
+      &:hover {
+        transform: scale(1.2);
+        -webkit-transform: scale(1.2);
+        -webkit-transition: all .8s;
+        transition: all .8s;
+        border: 1px solid #146eb4;
+      }
+    }
+  }
+}
+
+//common
+.short-line {
+    display: block;
+    background: #146eb4;
+    border-style: none;
+    border-radius: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    z-index: 53;
+    width: 100px;
+    height: 1.5px;
+    font-weight: 700;
+    position: left;
 }
