--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -52,7 +52,10 @@
     <td>
       <%= job.created_at %>
     </td>
-    
+
   </tr>
   <% end %>
 </table>
+<div class="text-center">
+  <%= will_paginate(@jobs, renderer: BootstrapPagination::Rails) %>
+</div>
