--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -3,7 +3,7 @@
   <div class="panel-heading">
     <h3>
       求职列表
-    
+
      <div class="dropdown clearfix pull-right">
          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuDivider" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
            排序
@@ -36,6 +36,7 @@
                 <td>薪资下限</td>
                 <td>薪资上限</td>
                 <td>刊登时间</td>
+                <td>申请职位</td>
             </tr>
 
         </thead>
@@ -54,14 +55,18 @@
                 <td>
                     <%= job.created_at %>
                 </td>
+                <td>
+                    <%= link_to("申请职位", new_job_resume_path(job), class: "btn btn-primary btn-sm")%>
+                </td>
             </tr>
             <% end %>
         </tbody>
 
     </table>
-    <div class="text-center">
-      <%= will_paginate(@jobs, renderer: BootstrapPagination::Rails) %>
-    </div>
+
   </div>
 </div>
+</div>
+<div class="text-center">
+  <%= will_paginate(@jobs, renderer: BootstrapPagination::Rails) %>
 </div>
