--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -108,12 +108,12 @@
 
 
 
-//-----common----
-.col-centered{
-  float: none;
-  margin: 0 auto;
-
-}
+// //-----common----
+// .col-centered{
+//   float: none;
+//   margin: 0 auto;
+//
+// }
 
 //--hot jobs--
 .hot-jobs-category {
