--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,7 @@
 
      border-color: black; //边框色
 
-     //margin-bottom: 0; //底部 margin 不撑开距离
+     margin-bottom: 15px; //底部 margin 不撑开距离
  }
 
  .navbar-default .navbar-brand {
