--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-6 col-centered">
+<!-- <div class="col-md-6 col-centered"> -->
   <div class="panel panel-default">
   <div class="panel-heading">
     <h3>
