--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -11,12 +11,13 @@
     <body>
 
         <div class="container-fluid">
+          <div class="row">
             <%= render "common/navbar" %>
             <%= render "common/flashes" %>
-            <div class="row">
+
               <div class="col-md-2">
                 <ul class="nav nav-pills nav-stacked" style="max-width: 300px; padding-top:20px;">
-                  <li class="active"><%= link_to("Jobs", admin_jobs_path ) %> </li>
+                  <li class="active"><%= link_to("Jobs", jobs_path ) %> </li>
 
                   </ul>
               </div>
