--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,6 +1,7 @@
-<footer class="container" style="margin-top: 100px;">
+<div class="footer">
     <p class="text-center">Copyright ©2017 Rails101
         <br>Design by ningkai
 
     </p>
-</footer> 
+
+</div>
