--- a/app/views/resumes/new.html.erb
+++ b/app/views/resumes/new.html.erb
@@ -1,3 +1,4 @@
+<div class="col-md-8 col-centered">
 <h3> 投交履历到 <%= @job.title %> </h3>
 
 <hr>
@@ -5,6 +6,6 @@
 <%= simple_form_for [@job, @resume] do |f| %>
   <%= f.input :content %>
   <%= f.input :attachment %>
-  
-  <%= f.submit "送出" %>
+
+  <%= f.submit "送出" , class:'btn btn-danger' %>
 <% end %>
