--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,4 +1,5 @@
 <div class="col-md-8 col-centered">
+
 <h1> <%= @job.title %> </h1>
 
 <p>
@@ -7,4 +8,5 @@
 </p>
 <div class="text-center">
   <%= link_to("投交履历", new_job_resume_path(@job), :style => "font-size: 30px; text-decoration: underline;") %>
+</div>
 </div>
